--- a/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
@@ -618,7 +618,7 @@
             formData.append("Comment", comment);
             $.ajax({
                 type: "POST",
-                url: '/Request/Upload',
+                url: '../Upload',
                 data: formData,
                 dataType: 'json',
                 contentType: false,
