CATS-1301 isssue has been modified.

--- a/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
@@ -128,9 +128,51 @@
             
         </div>
 
-        <div class="row" ng-controller="EWDashboardController">
-            <div class="col-md-8">
 
+
+
+  
+
+    <div class="row" ng-controller="EWDashboardController">
+            <div class="col-md-8">
+                <div class="box box-solid box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">Data Entry Status</h3>
+                        <div class="box-tools pull-right">
+                            <button data-widget="collapse" class="btn btn-primary btn-sm"><i class="fa fa-minus"></i></button>
+                            <button data-widget="remove" class="btn btn-primary btn-sm"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <div class="box-body">
+                        <table class="table table-striped table-checkable">
+                            <thead>
+                                <tr>
+                                    <th class="hidden-xs">Region</th>
+                                    <th class="number">Total Requested</th>
+                                    <th class="number">Allocated</th>
+                                    <th class="number">Completed</th>
+                                    <th class="number">Allocation Progress</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="requested in RegionalRequestStatus">
+                                    <td>{{requested.Region}}</td>
+                                    <td class="number">{{requested.TotalRequested|number}}</td>
+                                    <td class="number">{{requested.Allocated|number}}</td>
+                                    <td class="number">{{requested.Completed|number}}</td>
+                                    <td class="number">{{requested.AllocationProgress|number}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Total:</td>
+                                    <td class="number">{{getTotalRegionalRequest()}}</td>
+                                    <td class="number">{{getTotalRegionalRequestAllocated()}}</td>
+                                    <td class="number">{{getTotalRegionalRequestCompleted()}}</td>
+                                    <td class="number">{{getTotalRegionalRequestProgress()}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
                 <div class="box box-solid box-primary ">
                     <div class="box-header">
                         <h3 class="box-title">@ViewBag.HRDName</h3>
@@ -482,6 +524,9 @@
             $scope.GiftCertificates = [];
             $scope.DispatchTillDistributions = [];
 
+            $scope.RegionalRequestStatus = [];
+           
+
             var onRequestsSuccess = function (data) {
                 $scope.Requests = data;
             };
@@ -515,6 +560,43 @@
             var onDispatchTillDistributionSuccess = function (data) {
                 $scope.DispatchTillDistributions = data;
             };
+            var onRegionalRequestDataEntryStatus = function (data) {
+                $scope.RegionalRequestStatus = data;
+            }
+            $scope.getTotalRegionalRequest = function () {
+                var total = 0;
+                for (var i = 0; i < $scope.RegionalRequestStatus.length; i++) {
+                    var request = $scope.RegionalRequestStatus[i];
+                    total += request.TotalRequested;
+                }
+                return total;
+            }
+            $scope.getTotalRegionalRequestAllocated = function () {
+                var total = 0;
+                for (var i = 0; i < $scope.RegionalRequestStatus.length; i++) {
+                    var request = $scope.RegionalRequestStatus[i];
+                    total += request.Allocated;
+                }
+                return total;
+            }
+            $scope.getTotalRegionalRequestCompleted = function () {
+                var total = 0;
+                for (var i = 0; i < $scope.RegionalRequestStatus.length; i++) {
+                    var request = $scope.RegionalRequestStatus[i];
+                    total += request.Completed;
+                }
+                return total;
+            }
+            $scope.getTotalRegionalRequestProgress = function () {
+                var completed = 0;
+                var requested = 0;
+                for (var i = 0; i < $scope.RegionalRequestStatus.length; i++) {
+                    var request = $scope.RegionalRequestStatus[i];
+                    requested += request.TotalRequested;
+                    completed += request.Completed;
+                }
+                return (completed / requested) * 100;
+            }
 
             $scope.getRequests = function () {
                 $http.post("@Url.Action("GetRegionalRequests", "EWDashboard", new { Area = "EarlyWarning" })").success(onRequestsSuccess);
@@ -532,6 +614,10 @@
                 $http.post("@Url.Action("GetRequestedInfo", "EWDashboard", new { Area = "EarlyWarning" })").success(onRequestedAmoutSuccess);
 
         };
+
+            $scope.getRegionalRequestDataEntryStatus = function() {
+                $http.post("@Url.Action("GetRegionalRequestDataEntryStatus", "EWDashboard", new { Area = "EarlyWarning" })").success(onRegionalRequestDataEntryStatus);
+            };
             @*$scope.getStatusInPercentage = function () {
             $http.post("@Url.Action("GetStatusInPercentage", "EWDashboard", new { Area = "EarlyWarning" })").success(onRequestStatusSuccess);
 
@@ -558,6 +644,7 @@
             $scope.getRequests();
             $scope.getRequisitions();
             $scope.getRequestedInfo();
+            $scope.getRegionalRequestDataEntryStatus();
             //$scope.getStatusInPercentage();
             //$scope.getRequisitionStatusInPercentage();
             //$scope.getHrdRegionPercentage();
