Renamed the attachments folder to attachment to align with other issue resolutions

--- a/Web/Areas/WorkflowManager/Views/BusinessProcess/History.cshtml
+++ b/Web/Areas/WorkflowManager/Views/BusinessProcess/History.cshtml
@@ -27,7 +27,7 @@
             <td>@item.Comment</td>
             @if (!string.IsNullOrEmpty(item.AttachmentFile))
             {
-                <td><a href="@Url.Content("~/Content/Attachments/")@item.AttachmentFile">@item.AttachmentFile</a></td>
+                <td><a href="@Url.Content("~/Content/Attachment/")@item.AttachmentFile">@item.AttachmentFile</a></td>
             }
             
         </tr>
