--- a/Web/Areas/Logistics/Views/TransporterPaymentRequest/PaymentRequests.cshtml
+++ b/Web/Areas/Logistics/Views/TransporterPaymentRequest/PaymentRequests.cshtml
@@ -346,7 +346,7 @@
                     <li><a class="btn green-sharp-stripe" id="btnSubmitToFinance" href="@Url.Action("Multiplesubmission","TransporterPaymentRequest",new {actionType=(int)ActionType.Finance,transporterID=ViewBag.TransportOrderViewModel.TransporterID})">@Html.Translate("Submit to Finance")</a></li>
                     <li class="divider"></li>
                     <li><a class="btn green-sharp-stripe" onclick="print_payment_request_letter()">@Html.Translate("Print Letter")</a></li>
-                    <li><a class="btn green-sharp-stripe" onclick="print_payment_request()">@Html.Translate("Print")</a></lid>
+                    <li><a class="btn green-sharp-stripe" onclick="print_payment_request()">@Html.Translate("Print")</a></li>
                 </ul>
 
             </div>            
